# hermes

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  heartbeat.yml
.ops/: heartbeat.txt
cli/: package.json  tsconfig.json
cli/src/: cli.ts  colors.ts
crates/hermes-consensus/: Cargo.toml
crates/hermes-consensus/src/: leader.rs  lib.rs  producer.rs  slashing.rs  tower.rs
crates/hermes-ledger/: Cargo.toml
crates/hermes-ledger/src/: ledger.rs  lib.rs  receipt.rs
crates/hermes-primitives/: Cargo.toml
crates/hermes-primitives/src/: base58.rs  hash.rs  lib.rs  pubkey.rs  signature.rs  units.rs
crates/hermes-runtime/: Cargo.toml
crates/hermes-runtime/src/: account.rs  budget.rs  context.rs  error.rs  executor.rs  lib.rs  program.rs
crates/logios-consensus/: Cargo.toml
crates/logios-consensus/src/: leader.rs  lib.rs  producer.rs  slashing.rs  tower.rs
crates/logios-ledger/: Cargo.toml
crates/logios-ledger/src/: ledger.rs  lib.rs  receipt.rs
crates/logios-primitives/: Cargo.toml
crates/logios-primitives/src/: base58.rs  hash.rs  lib.rs  pubkey.rs  signature.rs  units.rs
crates/logios-runtime/: Cargo.toml
crates/logios-runtime/src/: account.rs  budget.rs  context.rs  error.rs  executor.rs  lib.rs  program.rs
docs/: api.md  architecture.md  consensus.md  multi-leader.md  quickstart.md  receipts.md  roadmap.md  runtime.md
examples/: README.md  curl.md  quickstart.ts  watch-slots.ts
programs/: README.md
programs/hermes-faucet/: Cargo.toml
programs/hermes-faucet/src/: lib.rs
programs/receipt-registry/: Cargo.toml
programs/receipt-registry/src/: lib.rs
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: client.ts  index.ts  types.ts
sdk/ts/src/__tests__/: client.test.ts
spec/: README.md  RFC-0001-autonomous-block-authoring.md  RFC-0002-svm-execution-and-compute-budget.md  RFC-0003-decision-receipts.md  RFC-0004-slashing-and-jail.md  RFC-0005-priority-fee-market.md  RFC-0006-anchor-idl-to-sbpf.md
tests/anchor/: hermes-faucet.ts  receipt-registry.ts
