[package]
name = "logios-consensus"
description = "Single-leader slot production, Tower-BFT vote tracking (WIP), and the Logios slashing engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
logios-primitives.workspace = true
logios-runtime.workspace = true
logios-ledger.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
sha2.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "logios-primitives/serde", "logios-ledger/serde"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
