[package]
name = "logios-primitives"
description = "Core Solana-native primitive types for Logios: base58 pubkeys/hashes/signatures, slots, lamports, compute units."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bs58.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
sha2.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
