[package]
name = "receipt-registry"
version = "0.1.0"
description = "Hermes on-chain registry of per-slot agent decision receipts (Hermes Labs)"
edition = "2021"
license = "Apache-2.0"
authors = ["Hermes Labs <dev@hermes-labs.xyz>"]
repository = "https://github.com/hermeslabssol/hermes"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipt_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
